# TrackLab

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: example.py
tracklab/: __init__.py  experiment.py  logger.py  reader.py  run.py  utils.py
tracklab/writers/: artifacts.py  config.py  metrics.py
