[project]
name = "tracklab"
version = "0.1.0"
description = "Simple package to for structured data logging"
authors = [
    { name = "Cristopher Erazo", email = "cerazova@sissa.it" }
]
dynamic = ["dependencies"] 

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find] 
where = ["."] 
exclude = ["scripts", "shell","notebooks"] 

[tool.setuptools.dynamic] 
dependencies = { file = ["requirements.txt"] } 

[project.optional-dependencies] 
test = ["pytest"]